@@ -1,3 +1,7 @@
+[B]0.9.7[/B]
+Fix resolution flags not showing
+Fix some alignment issues in dialogvideoinfo
+
 [B]0.9.6[/B]
 Many optimisations of skin code
 Viewmode disabler
